增加参考资料

--- a/COCO/common_objects_in_context.ipynb
+++ b/COCO/common_objects_in_context.ipynb
@@ -21,7 +21,8 @@
     "* [Microsoft COCO: Common Objects in Context](https://arxiv.org/pdf/1405.0312.pdf)\n",
     "* [MS coco数据集下载](https://blog.csdn.net/daniaokuye/article/details/78699138)\n",
     "* [COCO数据库](https://blog.csdn.net/happyhorizion/article/details/77894205)\n",
-    "* [Dataset - COCO Dataset 数据特点](https://blog.csdn.net/zziahgf/article/details/72819043)"
+    "* [Dataset - COCO Dataset 数据特点](https://blog.csdn.net/zziahgf/article/details/72819043)\n",
+    "* [COCO数据集的标注格式](https://zhuanlan.zhihu.com/p/29393415)"
    ]
   }
  ],
