--- a/VOC/pascal_visual_object_classes_challenge_2012.ipynb
+++ b/VOC/pascal_visual_object_classes_challenge_2012.ipynb
@@ -427,7 +427,8 @@
     "* [PASCAL VOC数据集分析](https://blog.csdn.net/zhangjunbob/article/details/52769381)\n",
     "* [深度学习图像分割（一）——PASCAL-VOC2012数据集（vocdevkit、Vocbenchmark_release）详细介绍](https://oldpan.me/archives/pascal-voc2012-guide)\n",
     "* [PASCAL VOC2012 Chanllge 及其Dataset介绍](https://blog.csdn.net/u011321962/article/details/64907080)\n",
-    "* [机器学习(7) PASCAL VOC2012数据集](https://blog.csdn.net/gzhermit/article/details/75729885)"
+    "* [机器学习(7) PASCAL VOC2012数据集](https://blog.csdn.net/gzhermit/article/details/75729885)\n",
+    "* [The PASCAL Visual Object Classes Challenge: A Retrospective](http://host.robots.ox.ac.uk/pascal/VOC/pubs/everingham15.pdf)"
    ]
   }
  ],
