--- a/VOC/pascal_visual_object_classes_challenge_2012.ipynb
+++ b/VOC/pascal_visual_object_classes_challenge_2012.ipynb
@@ -58,7 +58,7 @@
     "        - 2007_000129.jpg\n",
     "    * SegmentationClass `分割类别`\n",
     "        - 2007_000129.png\n",
-    "    * SegmentationObject `侵害对象`\n",
+    "    * SegmentationObject `分割对象`\n",
     "        - 2007_000129.png    "
    ]
   },
@@ -423,6 +423,7 @@
     "## 参考资料\n",
     "\n",
     "* [The PASCAL Visual Object Classes Challenge 2012 (VOC2012)](http://host.robots.ox.ac.uk/pascal/VOC/voc2012/index.html)\n",
+    "* [The PASCAL Visual Object Classes Challenge 2007 (VOC2007) Development Kit](http://host.robots.ox.ac.uk/pascal/VOC/voc2007/htmldoc/voc.html)\n",
     "* [VOC2011 Annotation Guidelines](http://host.robots.ox.ac.uk/pascal/VOC/voc2012/guidelines.html)\n",
     "* [PASCAL VOC数据集分析](https://blog.csdn.net/zhangjunbob/article/details/52769381)\n",
     "* [深度学习图像分割（一）——PASCAL-VOC2012数据集（vocdevkit、Vocbenchmark_release）详细介绍](https://oldpan.me/archives/pascal-voc2012-guide)\n",
